use Gradle's built-in Java Module System support