@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2021, 2022, Gluon
+ * Copyright (c) 2021, 2023, Gluon
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -33,14 +33,9 @@ import com.gluonhq.gradle.ClientExtension;
 import org.gradle.api.GradleException;
 import org.gradle.api.Project;
 import org.gradle.api.Task;
-import org.gradle.api.file.FileCollection;
 import org.gradle.api.plugins.ApplicationPlugin;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.TaskAction;
-import org.gradle.util.GradleVersion;
-import org.openjfx.gradle.JavaFXModule;
-import org.openjfx.gradle.JavaFXOptions;
-import org.openjfx.gradle.JavaFXPlatform;
 
 import javax.inject.Inject;
 import java.io.BufferedWriter;
@@ -53,11 +48,8 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.TreeSet;
 
 public class NativeRunAgentTask extends NativeBaseTask {
-
-    private static final String CONFIG_JAVAFX_RUN_TASK = "configJavafxRun";
 
     private static final String AGENTLIB_NATIVE_IMAGE_AGENT_STRING =
             "-agentlib:native-image-agent=access-filter-file=src/main/resources/META-INF/native-image/filter-file.json,config-merge-dir=src/main/resources/META-INF/native-image";
@@ -75,12 +67,6 @@ public class NativeRunAgentTask extends NativeBaseTask {
     public NativeRunAgentTask(Project project) {
         super(project);
         clientExtension = project.getExtensions().getByType(ClientExtension.class);
-
-        Task javafxRun = project.getTasks().findByName(CONFIG_JAVAFX_RUN_TASK);
-        if (javafxRun == null) {
-            throw new GradleException("javafxplugin:" + CONFIG_JAVAFX_RUN_TASK + " task not found.");
-        }
-        this.dependsOn(javafxRun.getPath());
     }
 
     @TaskAction
@@ -118,38 +104,12 @@ public class NativeRunAgentTask extends NativeBaseTask {
                 throw new GradleException("Run task not found.");
             }
 
-            JavaFXOptions javaFXOptions = project.getExtensions().getByType(JavaFXOptions.class);
-            var definedJavaFXModuleNames = new TreeSet<>(javaFXOptions.getModules());
-            if (definedJavaFXModuleNames.isEmpty()) {
-                throw new GradleException("No JavaFX modules found.");
-            }
-            final FileCollection classpathWithoutJavaFXJars = execTask.getClasspath().filter(
-                    jar -> Arrays.stream(JavaFXModule.values()).noneMatch(javaFXModule ->
-                            jar.getName().contains(javaFXModule.getArtifactName()))
-            );
-            final FileCollection javaFXPlatformJars = execTask.getClasspath().filter(jar ->
-                    isJavaFXJar(jar, javaFXOptions.getPlatform()));
-
-            // Remove all JavaFX jars from classpath
-            execTask.setClasspath(classpathWithoutJavaFXJars);
-
-            // Define JVM args for command line
-            var javaFXModuleJvmArgs = List.of("--module-path", javaFXPlatformJars.getAsPath());
-            var jvmArgs = new ArrayList<>(javaFXModuleJvmArgs);
-            jvmArgs.add("--add-modules");
-            jvmArgs.add(String.join(",", definedJavaFXModuleNames));
-            if (GradleVersion.current().compareTo(GradleVersion.version("6.6")) < 0) {
-                // Include classpath as JVM arg for Gradle versions lower than 6.6
-                jvmArgs.add("-cp");
-                jvmArgs.add(classpathWithoutJavaFXJars.getAsPath());
-            }
-
             // set java_home
             execTask.executable(Path.of(graalVMHome.toString(), "bin", "java").toString());
 
             // set jvmargs
-            execTask.getJvmArgs().add(AGENTLIB_NATIVE_IMAGE_AGENT_STRING);
-            execTask.getJvmArgs().addAll(jvmArgs);
+            var jvmArgs = List.of(AGENTLIB_NATIVE_IMAGE_AGENT_STRING);
+            execTask.getJvmArgumentProviders().add(() -> jvmArgs);
 
             // run
             execTask.exec();
@@ -190,12 +150,5 @@ public class NativeRunAgentTask extends NativeBaseTask {
             bw.write("\n  ]\n");
             bw.write("}\n");
         }
-    }
-
-    private static boolean isJavaFXJar(File jar, JavaFXPlatform platform) {
-        return jar.isFile() &&
-                Arrays.stream(JavaFXModule.values()).anyMatch(javaFXModule ->
-                        javaFXModule.compareJarFileName(platform, jar.getName()) ||
-                                javaFXModule.getModuleJarFileName().equals(jar.getName()));
     }
 }
